@@ -1,6 +1,7 @@
 version 0.9-2
 - correctSigns now breaks of a 1e5 sign flip combinations - can be adjusted by setting "maxCombinations"
 - solved bug causing correctSigs to crash if no records at all were fixed.
+- correctRounding failed when running on R 2.10, is fixed.
 
 version 0.9-1
 - Fixed a bug in correctTypos: when a record was invalid but no sensible corrections could be made, the function returned an error
